--- a/flourish-wellbeing/index.html
+++ b/flourish-wellbeing/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Evidence-based therapy in Cambridge. LGBTQ+ friendly, neurodivergent-affirming mental health support. HCPC & BACP registered therapists.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
