--- a/cambridge-wellness-hub/index.html
+++ b/cambridge-wellness-hub/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cambridge Wellness Hub | Integrated Healthcare Excellence</title>
     <meta name="description" content="Premium integrated healthcare in Cambridge. Combining conventional medicine with holistic wellness. CQC registered, evidence-based care.">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -75,7 +75,7 @@
         }
 
         .logo-text h1 {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Lora', serif;
             font-size: 1.4rem;
             font-weight: 700;
             color: var(--navy);
@@ -155,7 +155,7 @@
         }
 
         .hero h1 {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Lora', serif;
             font-size: 4.5rem;
             font-weight: 700;
             line-height: 1.1;
@@ -208,7 +208,7 @@
         }
 
         .value-header h2 {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Lora', serif;
             font-size: 2.8rem;
             color: var(--navy);
             margin-bottom: 1.5rem;
@@ -258,7 +258,7 @@
         }
 
         .value-card h3 {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Lora', serif;
             font-size: 1.5rem;
             color: var(--navy);
             margin-bottom: 1rem;
@@ -306,7 +306,7 @@
         }
 
         .content-intro h2 {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Lora', serif;
             font-size: 2.5rem;
             color: var(--navy);
             margin-bottom: 1.5rem;
@@ -353,7 +353,7 @@
         }
 
         .banner-content h2 {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Lora', serif;
             font-size: 3rem;
             margin-bottom: 1rem;
             font-weight: 600;
@@ -401,7 +401,7 @@
         }
 
         .services-header h2 {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Lora', serif;
             font-size: 2.8rem;
             color: var(--navy);
             margin-bottom: 1rem;
@@ -437,7 +437,7 @@
         }
 
         .service-card h3 {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Lora', serif;
             font-size: 1.3rem;
             color: var(--navy);
             margin-bottom: 0.5rem;
@@ -458,7 +458,7 @@
         }
 
         .philosophy-container h2 {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Lora', serif;
             font-size: 3rem;
             margin-bottom: 2rem;
             font-weight: 600;
@@ -503,7 +503,7 @@
         }
 
         .contact-info h2 {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Lora', serif;
             font-size: 2.8rem;
             color: var(--navy);
             margin-bottom: 2rem;
@@ -629,7 +629,7 @@
         }
 
         .footer-brand h3 {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Lora', serif;
             font-size: 1.8rem;
             margin-bottom: 1rem;
         }
