--- a/cambridge-wellness-hub/index.html
+++ b/cambridge-wellness-hub/index.html
@@ -129,7 +129,6 @@
         .hero {
             margin-top: 90px;
             position: relative;
-            height: 85vh;
             display: flex;
             align-items: center;
             background: linear-gradient(to right, rgba(27, 59, 90, 0.92), rgba(74, 144, 184, 0.85)), 
@@ -137,6 +136,7 @@
             background-size: cover;
             background-position: center;
             color: white;
+            padding: 5rem 0;
         }
 
         .hero-content {
@@ -149,7 +149,7 @@
         .hero-subtitle {
             font-style: italic;
             font-size: 1.1rem;
-            margin-bottom: 1.5rem;
+            margin-bottom: 5rem;
             letter-spacing: 1px;
             opacity: 0.95;
         }
@@ -159,7 +159,7 @@
             font-size: 4.5rem;
             font-weight: 700;
             line-height: 1.1;
-            margin-bottom: 2rem;
+            margin-bottom: 5rem;
             max-width: 900px;
         }
 
@@ -167,7 +167,7 @@
             font-size: 1.3rem;
             line-height: 1.8;
             max-width: 700px;
-            margin-bottom: 3rem;
+            margin-bottom: 5rem;
             opacity: 0.95;
             font-weight: 300;
         }
@@ -187,7 +187,8 @@
         }
 
         .hero-cta:hover {
-            background: transparent;
+            background: white;
+            color: black;
             transform: translateY(-3px);
         }
 
@@ -941,11 +942,6 @@
             
             <div class="philosophy-grid">
                 <div class="philosophy-item">
-                    <h3>WE GIVE YOU ACCESS TO YOUR DOCTOR</h3>
-                    <p>You want to call/text/e-mail for advice. In today's healthcare landscape, access matters. We ensure you can reach your physician when you need guidance, not just during appointments.</p>
-                </div>
-
-                <div class="philosophy-item">
                     <h3>OUR COSTS ARE CLEAR. NO SURPRISES.</h3>
                     <p>You don't like big surprise bills. Neither do we. Transparent pricing means you know exactly what to expect—no hidden fees, no unexpected charges.</p>
                 </div>
@@ -1147,3 +1143,8 @@
     </script>
 </body>
 </html>
+                    <h3>WE GIVE YOU ACCESS TO YOUR DOCTOR</h3>
+                    <p>You want to call/text/e-mail for advice. In today's healthcare landscape, access matters. We ensure you can reach your physician when you need guidance, not just during appointments.</p>
+                </div>
+
+                <div class="philosophy-item">
