--- a/flourish-wellbeing/index.html
+++ b/flourish-wellbeing/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flourish Wellbeing Practice | Compassionate Therapy in Cambridge</title>
-    <meta name="description" content="Evidence-based therapy in Cambridge. LGBTQ+ friendly, neurodivergent-affirming mental health support. HCPC & BACP registered therapists.">
+    <meta name="description" content="Evidence-based therapy in Cambridge. HCPC & BACP registered therapists.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
@@ -726,20 +726,12 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1>Compassionate Therapy for Real People</h1>
-                <p class="hero-subtitle">Evidence-based therapy that honours your unique story. LGBTQ+ friendly, neurodivergent-affirming, and committed to helping you thrive—not just survive.</p>
+                <p class="hero-subtitle">Evidence-based therapy that honours your unique story. Committed to helping you thrive - not just survive.</p>
                 
                 <div class="hero-features">
                     <div class="hero-feature">
                         <span class="checkmark">✓</span>
                         HCPC & BACP Registered
-                    </div>
-                    <div class="hero-feature">
-                        <span class="checkmark">✓</span>
-                        LGBTQ+ Friendly
-                    </div>
-                    <div class="hero-feature">
-                        <span class="checkmark">✓</span>
-                        Neurodivergent-Affirming
                     </div>
                     <div class="hero-feature">
                         <span class="checkmark">✓</span>
@@ -764,14 +756,6 @@
             <div class="trust-item">
                 <span class="trust-icon">🏥</span>
                 <span>HCPC & BACP Registered</span>
-            </div>
-            <div class="trust-item">
-                <span class="trust-icon">🏳️‍🌈</span>
-                <span>LGBTQ+ Friendly</span>
-            </div>
-            <div class="trust-item">
-                <span class="trust-icon">🧠</span>
-                <span>Neurodivergent-Affirming</span>
             </div>
             <div class="trust-item">
                 <span class="trust-icon">📊</span>
@@ -842,7 +826,7 @@
                         <p class="team-title">Integrative Therapist (MBACP Accred.)</p>
                         <div class="team-specialisms">
                             <h4>Specialisms</h4>
-                            <p>Relationship issues, identity, LGBTQ+ affirmative therapy</p>
+                            <p>Relationship issues</p>
                         </div>
                         <p class="team-quote">"Your identity is valid. Your feelings are valid. You deserve to be seen, heard, and supported exactly as you are."</p>
                         <p class="team-registration">BACP Registration: 0XXXXXX</p>
@@ -1032,7 +1016,7 @@
         <div class="footer-container">
             <div class="footer-section">
                 <h3>Flourish Wellbeing Practice</h3>
-                <p>Compassionate, evidence-based therapy in Cambridge. LGBTQ+ friendly and neurodivergent-affirming.</p>
+                <p>Compassionate, evidence-based therapy in Cambridge.</p>
             </div>
 
             <div class="footer-section">
