--- a/cambridge-core-clinic/index.html
+++ b/cambridge-core-clinic/index.html
@@ -126,7 +126,7 @@
                         Your Health, Your Schedule
                     </h1>
                     <p class="text-xl text-gray-600 mb-8 leading-relaxed">
-                        Same-week appointments with experienced GPs who know you by name. No rushing, no waiting lists—just comprehensive private healthcare when you need it most.
+                        Same-week appointments with experienced GPs who know you by name. No rushing, no waiting lists - just comprehensive private healthcare when you need it most.
                     </p>
                     
                     <!-- Feature Pills -->
@@ -245,7 +245,7 @@
                         </svg>
                     </div>
                     <h3 class="text-xl font-semibold text-gray-900 mb-3">Get Your Care Plan</h3>
-                    <p class="text-gray-600">Leave with prescriptions, referrals, or test requests—no need for multiple appointments.</p>
+                    <p class="text-gray-600">Leave with prescriptions, referrals, or test requests - no need for multiple appointments.</p>
                 </div>
             </div>
         </div>
@@ -362,7 +362,7 @@
                         </svg>
                     </button>
                     <div class="accordion-content px-6 bg-gray-50 border-t border-gray-200">
-                        <p class="text-gray-700 leading-relaxed py-4">We typically offer next-day appointments, with same-day slots available for urgent concerns. Book online or call us—we'll always fit you in when you need us.</p>
+                        <p class="text-gray-700 leading-relaxed py-4">We typically offer next-day appointments, with same-day slots available for urgent concerns. Book online or call us - we'll always fit you in when you need us.</p>
                     </div>
                 </div>
 
@@ -427,7 +427,7 @@
 
                         <div class="border-l-4 border-blue-600 pl-6">
                             <h3 class="text-xl font-semibold text-gray-900 mb-2">Health Screenings & Check-Ups</h3>
-                            <p class="text-gray-600">Executive health assessments, well-person checks, cardiovascular screening, and preventive health reviews. Early detection saves lives—we'll create a screening plan tailored to your age, lifestyle, and risk factors.</p>
+                            <p class="text-gray-600">Executive health assessments, well-person checks, cardiovascular screening, and preventive health reviews. Early detection saves lives - we'll create a screening plan tailored to your age, lifestyle, and risk factors.</p>
                         </div>
 
                         <div class="border-l-4 border-blue-600 pl-6">
@@ -505,7 +505,7 @@
                     We accept most major private medical insurance providers including Bupa, AXA PPP, Aviva, and Vitality Health. Please check your policy coverage before booking.
                 </p>
                 <p class="text-gray-700 text-lg">
-                    Self-pay patients are welcome—our transparent pricing means you'll never receive unexpected bills.
+                    Self-pay patients are welcome - our transparent pricing means you'll never receive unexpected bills.
                 </p>
             </div>
         </div>
@@ -609,7 +609,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
                     </svg>
                     <h3 class="font-semibold text-gray-900 mb-2">Telephone</h3>
-                    <p class="text-gray-600">01223 XXX XXX</p>
+                    <p class="text-gray-500">01223 XXX XXX</p>
                 </div>
 
                 <div class="bg-white p-6 rounded-xl text-center shadow-sm border border-gray-100">
@@ -617,7 +617,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
                     </svg>
                     <h3 class="font-semibold text-gray-900 mb-2">Email</h3>
-                    <p class="text-gray-600 text-sm">reception@cambridgecoreclinic.co.uk</p>
+                    <p class="text-gray-500 text-sm">reception@cambridgecore.co.uk</p>
                 </div>
 
                 <div class="bg-white p-6 rounded-xl text-center shadow-sm border border-gray-100">
@@ -626,7 +626,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
                     </svg>
                     <h3 class="font-semibold text-gray-900 mb-2">Address</h3>
-                    <p class="text-gray-600">Central Cambridge<br>CB1 XXX</p>
+                    <p class="text-gray-500">Central Cambridge<br>CB1 XXX</p>
                 </div>
             </div>
 
@@ -684,7 +684,7 @@
                     <h4 class="font-semibold text-white mb-4">Contact</h4>
                     <ul class="space-y-2 text-sm">
                         <li>01223 XXX XXX</li>
-                        <li>reception@cambridgecoreclinic.co.uk</li>
+                        <li>reception@cambridgecore.co.uk</li>
                         <li>Central Cambridge, CB1 XXX</li>
                     </ul>
                 </div>
