--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                 </div>
                 <div class="card-content">
                     <h3 class="card-title">Flourish Wellbeing Practice</h3>
-                    <p class="card-tagline">Compassionate, evidence-based therapy that honours your unique story</p>
+                    <p class="card-tagline">Research-backed care designed to support your healing, resilience, and authentic wellbeing</p>
                     <span class="card-category">Mental Health</span>
                 </div>
             </a>
