--- a/cambridge-wellness-hub/index.html
+++ b/cambridge-wellness-hub/index.html
@@ -341,8 +341,7 @@
         /* Full Width Image Banner */
         .image-banner {
             height: 500px;
-            background: linear-gradient(to right, rgba(27, 59, 90, 0.5), rgba(74, 144, 184, 0.5)),
-                        url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="1920" height="500"%3E%3Crect fill="%236B7C93" width="1920" height="500"/%3E%3Ctext x="50%25" y="50%25" font-size="32" fill="white" text-anchor="middle" dominant-baseline="middle" font-family="serif" opacity="0.4"%3EPremium Healthcare Environment%3C/text%3E%3C/svg%3E');
+            background: linear-gradient(to right, rgba(27, 59, 90, 0.5), rgba(74, 144, 184, 0.5));
             background-size: cover;
             background-position: center;
             display: flex;
@@ -780,8 +779,8 @@
     <!-- Hero -->
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1>Where Comprehensive Medicine Meets Personal Care</h1>
-            <p class="hero-description">At Cambridge Wellness Hub, we provide exceptional integrated healthcare that combines the precision of conventional medicine with a holistic understanding of your wellbeing. Our board-certified physicians take the time to understand you—not just your symptoms.</p>
+            <h1>Integrated Healthcare. Uncompromising Standards. Exceptional Results.</h1>
+            <p class="hero-description">At Cambridge Wellness Hub, we provide exceptional integrated healthcare that combines the precision of conventional medicine with a holistic understanding of your wellbeing. Our board-certified physicians take the time to understand you - not just your symptoms.</p>
             <a href="#contact" class="hero-cta">SCHEDULE YOUR CONSULTATION</a>
         </div>
     </section>
@@ -839,7 +838,7 @@
                         <li>Combination of Conventional and Integrative Medicine</li>
                         <li>A focus on healing & maintenance of wellness</li>
                         <li>Evidence-based treatment protocols</li>
-                        <li>Personalized care plans</li>
+                        <li>Personalised care plans</li>
                     </ul>
                 </div>
             </div>
@@ -851,8 +850,8 @@
         <div class="content-container">
             <div class="content-intro">
                 <h2>More than just your typical doctor's office.</h2>
-                <p>At Cambridge Wellness Hub we provide unmatched convenient healthcare in a fast-moving city, with a staff of caring board certified doctors, supporting medical staff, the latest in treatments and diagnostics—we concentrate on an integrative approach to treat our patients. At Cambridge Wellness Hub patients will find a wide range of services that treat the individual. Integrative medicine puts an emphasis on functional, holistic and internal medicine.</p>
-                <p>Located in the heart of Cambridge, between the Science Park and the city centre, Cambridge Wellness Hub is a full service, state-of-the-art medical center with integrative doctors who take a different approach to healing acute and chronic conditions, as well as maintaining your health. Our practice specializes in <a href="#" class="content-link">Internal Medicine</a>, <a href="#" class="content-link">Primary Care Medicine</a>, and <a href="#" class="content-link">Preventive Medicine</a> using an integrative approach and <strong>Integrative Treatment</strong> methods to accommodate all of your health needs.</p>
+                <p>At Cambridge Wellness Hub we provide unmatched convenient healthcare in a fast-moving city, with a staff of caring board certified doctors, supporting medical staff, the latest in treatments and diagnostics - we concentrate on an integrative approach to treat our patients. At Cambridge Wellness Hub patients will find a wide range of services that treat the individual. Integrative medicine puts an emphasis on functional, holistic and internal medicine.</p>
+                <p>Located in the heart of Cambridge, between the Science Park and the city centre, Cambridge Wellness Hub is a full service, state-of-the-art medical center with integrative doctors who take a different approach to healing acute and chronic conditions, as well as maintaining your health. Our practice specializes in Internal Medicine, Primary Care Medicine, and Preventive Medicine using an integrative approach and <strong>Integrative Treatment</strong> methods to accommodate all of your health needs.</p>
                 <p>When choosing Cambridge Wellness Hub you're not only choosing a highly trained medical professional, you're choosing someone who's committed to partnering with you to improve your overall health and well-being.</p>
             </div>
         </div>
@@ -942,7 +941,7 @@
             <div class="philosophy-grid">
                 <div class="philosophy-item">
                     <h3>OUR COSTS ARE CLEAR. NO SURPRISES.</h3>
-                    <p>You don't like big surprise bills. Neither do we. Transparent pricing means you know exactly what to expect—no hidden fees, no unexpected charges.</p>
+                    <p>You don't like big surprise bills. Neither do we. Transparent pricing means you know exactly what to expect - no hidden fees, no unexpected charges.</p>
                 </div>
 
                 <div class="philosophy-item">
@@ -952,7 +951,12 @@
 
                 <div class="philosophy-item">
                     <h3>WE BUILD TRUST AND UNDERSTANDING</h3>
-                    <p>You want a doctor you can trust, one who will understand you. We give you time at each visit to build trust and understanding—because medicine is about relationships.</p>
+                    <p>You want a doctor you can trust, one who will understand you. We give you time at each visit to build trust and understanding - because medicine is about relationships.</p>
+                </div>
+
+                <div class="philosophy-item">
+                    <h3>WE MAKE HEALTHCARE SIMPLE</h3>
+                    <p>You’re tired of confusing processes, long waits, and looping back through multiple departments. We streamline your care with easy scheduling, fast access to clinicians, and straightforward guidance at every step - so your healthcare feels effortless, not overwhelming.</p>
                 </div>
             </div>
         </div>
@@ -963,7 +967,7 @@
         <div class="contact-container">
             <div class="contact-info">
                 <h2>Begin Your Journey to Optimal Health</h2>
-                <p>Ready to experience healthcare that prioritizes you? Our team is here to answer your questions and schedule your first consultation. Whether you're seeking preventive care, managing a chronic condition, or simply want a physician who truly listens—we're ready to partner with you.</p>
+                <p>Ready to experience healthcare that prioritizes you? Our team is here to answer your questions and schedule your first consultation. Whether you're seeking preventive care, managing a chronic condition, or simply want a physician who truly listens - we're ready to partner with you.</p>
 
                 <div class="contact-details">
                     <div class="contact-item">
