--- a/flourish-wellbeing/index.html
+++ b/flourish-wellbeing/index.html
@@ -292,9 +292,8 @@
         }
 
         .trust-item {
-            display: flex;
-            align-items: center;
-            gap: 0.7rem;
+            flex: 1;
+            text-align: center;
             color: var(--text-dark);
             font-weight: 600;
         }
