--- a/index.html
+++ b/index.html
@@ -963,8 +963,8 @@
             <div class="process-row">
                 <div class="process-num">03</div>
                 <div>
-                    <h3>Accountability & Continuity</h3>
-                    <p class="body-text">I cap my monthly intake to guarantee long-term support for every client. You work directly with me - ensuring professional accountability and a site that evolves with your practice, not a 'launch and leave' project.</p>
+                    <h3>Continuity</h3>
+                    <p class="body-text">I cap my monthly intake so every build gets the attention it deserves. You work directly with me for a focused launch, with the option to add an ongoing care package if you want the site to keep evolving with your practice.</p>
                 </div>
             </div>
         </div>
