--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
                 <div class="process-num">01</div>
                 <div>
                     <h3>Healthcare Expertise</h3>
-                    <p class="body-text">Cambridge medical background with first-hand experience of NHS and private patient journeys. I design around how your practice actually runs, so patients book faster and staff spend less time chasing.</p>
+                    <p class="body-text">Cambridge student doctor with first-hand experience of NHS and private patient journeys. I design around how your practice actually runs, so patients book faster and staff spend less time chasing.</p>
                 </div>
             </div>
 
