--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
                         <li>Copywriting for Conversion</li>
                         <li>Enquiry Tracking Dashboard</li>
                         <li style="color: var(--navy); font-weight: 600; margin-top: 1rem; border-top: 1px dashed #ccc; padding-top: 1rem;">
-                            🛡️ 90-Day Performance Promise
+                            90-Day Performance Promise
                         </li>
                     </ul>
                     <p style="font-size: 0.85rem; color: var(--text-light); line-height: 1.4; margin-bottom: 1.5rem;">
@@ -855,7 +855,7 @@
                 </p>
                 <a href="https://calendly.com/jn461-cam/30min" target="_blank" class="btn btn-primary">Book a Founding Partner Call</a>
                 <p style="font-size: 0.85rem; color: var(--text-light); margin-top: 1rem;">
-                    Strictly limited to 4 practices for January 2026 (2 spaces remaining).
+                    Strictly limited to 4 practices for January 2026 (2 openings left).
                 </p>
             </div>
         </div>
