--- a/the-mind-place/index.html
+++ b/the-mind-place/index.html
@@ -1037,9 +1037,7 @@
                 <h1 id="hero-title" class="hero__title mb-md">
                     Finding your ground when life feels <em>heavy.</em>
                 </h1>
-                <p class="hero__text lead mb-lg">
-                    You don't have to carry the overwhelm alone. The Mind Place offers a calm, safe space to untangle your thoughts, feel truly heard, and find a way forward - at your own pace.
-                </p>
+                <p class="hero__text lead mb-lg">The Mind Place is a safe, calm space to be heard and move forward - at your own pace.</p>
                 <div class="hero__actions">
 <a href="#contact" class="btn btn--primary" style="color:#000000;">
   Book an Introductory Session
