--- a/the-mind-place/index.html
+++ b/the-mind-place/index.html
@@ -1343,7 +1343,7 @@
                 <p>Having worked in both community services and the corporate world, I understand the unique pressures of modern life. I offer a down-to-earth, non-judgemental partnership where you can be your messy, unpolished self.</p>
                 
                 <div class="credentials-bar mt-lg" style="justify-content: flex-start; margin-top: 2rem;">
-                     <div class="credential-item" title="Registered Member of BACP">
+                     <div class="credential-item" title="MBACP 413816">
                          <svg class="credential-icon" viewBox="0 0 24 24"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"/></svg>
                          <span>BACP Registered</span>
                      </div>
