--- a/the-mind-place/index.html
+++ b/the-mind-place/index.html
@@ -1870,11 +1870,11 @@
 
     <div class="footer__accreditations">
     <a href="https://www.bacp.co.uk/therapists/413816/deborah-armiger/st-neots-pe19" target="_blank" rel="noopener noreferrer" title="BACP Registered Member">
-        <img src="bacplogo.png" alt="BACP Registered Member Logo" class="footer__logo" width="120" height="auto">
+        <img src="bacp.png" alt="BACP Registered Member Logo" class="footer__logo" width="120" height="auto">
     </a>
     
     <a href="https://www.counselling-directory.org.uk/counsellors/deborah-armiger" target="_blank" rel="noopener noreferrer" title="Counselling Directory Member">
-        <img src="counselling-directory-logo.png" alt="Counselling Directory Member Logo" class="footer__logo" width="120" height="auto">
+        <img src="counselling-directory.png" alt="Counselling Directory Member Logo" class="footer__logo" width="120" height="auto">
     </a>
 </div>
 </footer>
